--- a/DiscordBot/packages.config
+++ b/DiscordBot/packages.config
@@ -6,10 +6,12 @@
   <package id="Discord.Net.Rest" version="2.3.1" targetFramework="net472" />
   <package id="Discord.Net.WebSocket" version="2.3.1" targetFramework="net472" />
   <package id="Discord.Net.Webhook" version="2.3.1" targetFramework="net472" />
+  <package id="Json.Net" version="1.0.25" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0-preview.2.21154.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0-preview.2.21154.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0-preview.2.21154.6" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="RestSharp" version="106.11.8-alpha.0.12" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
   <package id="System.Interactive.Async" version="4.0.0" targetFramework="net472" />
   <package id="System.Linq.Async" version="4.0.0" targetFramework="net472" />
