--- a/DiscordBot/DiscordBot.csproj
+++ b/DiscordBot/DiscordBot.csproj
@@ -105,8 +105,10 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Modules\Commands.cs" />
+        <Compile Include="Modules\Owowifier.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Util\CheckMessage.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
