--- a/CatGirl/CatGirl.csproj
+++ b/CatGirl/CatGirl.csproj
@@ -8,7 +8,7 @@
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>DiscordBot</RootNamespace>
-        <AssemblyName>DiscordBot</AssemblyName>
+        <AssemblyName>CatGirl</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
