--- a/CatGirl/CatGirl.csproj
+++ b/CatGirl/CatGirl.csproj
@@ -69,8 +69,16 @@
           <Private>True</Private>
         </Reference>
         <Reference Include="mscorlib" />
+        <Reference Include="Nekos-Sharp, Version=3.5.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\Nekos-Sharp.3.5.0\lib\netstandard2.0\Nekos-Sharp.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="Nekoslife.net, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\Nekoslife.net.1.0.0\lib\netstandard2.0\Nekoslife.net.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+          <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="RestSharp, Version=106.11.8.0, Culture=neutral, PublicKeyToken=598062e77f915f75">
@@ -109,6 +117,7 @@
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Util\Owowification.cs" />
+        <Compile Include="Util\WebScrape.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
