--- a/CatGirl/packages.config
+++ b/CatGirl/packages.config
@@ -10,7 +10,9 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0-preview.2.21154.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0-preview.2.21154.6" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0-preview.2.21154.6" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Nekos-Sharp" version="3.5.0" targetFramework="net472" />
+  <package id="Nekoslife.net" version="1.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="RestSharp" version="106.11.8-alpha.0.12" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
   <package id="System.Interactive.Async" version="4.0.0" targetFramework="net472" />
