--- a/CatGirl/CatGirl.csproj
+++ b/CatGirl/CatGirl.csproj
@@ -115,7 +115,7 @@
         <Compile Include="Commands\Actions.cs" />
         <Compile Include="Commands\Commands.cs" />
         <Compile Include="Commands\CommandSource.cs" />
-        <Compile Include="Modules\Owowifier.cs" />
+        <Compile Include="Commands\Owowifier.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Util\Owowification.cs" />
