--- a/CatGirl/CatGirl.csproj
+++ b/CatGirl/CatGirl.csproj
@@ -118,6 +118,7 @@
         <Compile Include="Commands\Owowifier.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Util\EnumerableExtensions.cs" />
         <Compile Include="Util\Owowification.cs" />
         <Compile Include="Util\WebScraper.cs" />
     </ItemGroup>
