--- a/catgirl-bot/catgirl-bot.csproj
+++ b/catgirl-bot/catgirl-bot.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="Nekos-Sharp" Version="3.5.0" />
-    <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="RestSharp" Version="106.11.8-alpha.0.13" />
   </ItemGroup>
 
 </Project>
